# Trash_boy

./: README.md  frames_2025-10-18_23.34.26.gv  frames_2025-10-18_23.36.20.gv
install/: local_setup.sh  setup.sh
install/trash_boy/lib/trash_boy/: object_follower  object_tracker
install/trash_boy/share/trash_boy/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/trash_boy/: package.xml  setup.cfg  setup.py
src/trash_boy/config/: fine_mecanum_controller  slam_toolbox.yaml
src/trash_boy/launch/: finelaunch.py  object_tracking.launch.py
src/trash_boy/trash_boy/: mecanum_teleop.py  object_follower.py  object_tracker.py
src/trash_boy/urdf/: model.urdf
